--- a/Style.css
+++ b/Style.css
@@ -178,7 +178,7 @@
 
 @font-face {
   font-family: 'MyCustomFont';
-  src: url('GoodKing-Regular.ttf') format('ttf');
+  src: url('GoodKing-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
