--- a/Style.css
+++ b/Style.css
@@ -205,7 +205,7 @@
         }
         @font-face {
           font-family: 'Good King';
-          src: url('GoodKing-Regular.ttf') format('truetype');
+          src: url('../../IPO-View/GoodKing-Regular.ttf') format('truetype');
           font-weight: 400;
           font-style: normal;
         }
